# ChangeLog for dev-ruby/parsetree
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/parsetree/ChangeLog,v 1.9 2008/12/28 09:40:45 graaff Exp $

*parsetree-3.0.2 (28 Dec 2008)

  28 Dec 2008; Hans de Graaff <graaff@gentoo.org> +parsetree-3.0.2.ebuild:
  Version bump with new dependency on sexp-processor which used to be
  distributed as part of parsetree.

  19 Nov 2008; Hans de Graaff <graaff@gentoo.org> -parsetree-2.0.1.ebuild,
  -parsetree-2.0.2.ebuild:
  Remove old versions

*parsetree-2.2.0 (06 Oct 2008)

  06 Oct 2008; Hans de Graaff <graaff@gentoo.org> +parsetree-2.2.0.ebuild:
  Version bump with many enhancements

*parsetree-2.1.1 (26 Jan 2008)

  26 Jan 2008; Hans de Graaff <graaff@gentoo.org> +parsetree-2.1.1.ebuild:
  Version bump: 13 enhancements and 6 bug fixes

  14 Oct 2007; Tom Gall <tgall@gentoo.org> parsetree-2.0.2.ebuild:
  added ~ppc64

*parsetree-2.0.2 (07 Oct 2007)

  07 Oct 2007; Richard Brown <rbrown@gentoo.org> -parsetree-1.7.0.ebuild,
  -parsetree-2.0.0.ebuild, +parsetree-2.0.2.ebuild:
  Version bump. Remove old versions.

*parsetree-2.0.1 (25 Aug 2007)

  25 Aug 2007; Hans de Graaff <graaff@gentoo.org> +parsetree-2.0.1.ebuild:
  Version bump with a number of enhancements and bug fixes.

*parsetree-2.0.0 (05 Aug 2007)

  05 Aug 2007; Hans de Graaff <graaff@gentoo.org> +parsetree-2.0.0.ebuild:
  Version bump, thanks to Elias Pipping in bug #187494.

*parsetree-1.7.0 (13 Apr 2007)

  13 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  +parsetree-1.7.0.ebuild:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
