@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/parsetree
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/parsetree/ChangeLog,v 1.9 2008/12/28 09:40:45 graaff Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/parsetree/ChangeLog,v 1.10 2009/06/04 05:28:20 graaff Exp $
+
+*parsetree-3.0.3 (04 Jun 2009)
+
+  04 Jun 2009; Hans de Graaff <graaff@gentoo.org> +parsetree-3.0.3.ebuild:
+  Version bump with bug fixes.
 
 *parsetree-3.0.2 (28 Dec 2008)
 
